--- a/stripes-deploy/stripes-deployment.yaml
+++ b/stripes-deploy/stripes-deployment.yaml
@@ -2,6 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: stripes-service-${CICD_EXECUTION_SEQUENCE}
+  namespace: stripes
 spec:
   selector:
     app: stripes-${CICD_EXECUTION_SEQUENCE}
@@ -15,6 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: stripes-pipeline-${CICD_EXECUTION_SEQUENCE}
+  namespace: stripes
   labels:
     app: stripes-${CICD_EXECUTION_SEQUENCE}
 spec:
