--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -12,7 +12,9 @@ stages:
       PLUGIN_BUILD_ARGS_FROM_ENV: TENANT_ID,OKAPI_URL
     envFrom:
       - sourceName: tenant-config
-        sourceKey: TENANT_ID,OKAPI_URL
+        sourceKey: TENANT_ID
+        sourceName: tenant-config
+        sourceKey: OKAPI_URL
     when:
       branch: {}
       event: {}
