--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@folio/platform-complete",
-  "version": "1.1.0-SNAPSHOT",
+  "version": "1.2.0-RANCHER",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "export NODE_OPTIONS=\"--max-old-space-size=4096 $NODE_OPTIONS\"; stripes build stripes.config.js",
+    "build": "export NODE_OPTIONS=\"--max-old-space-size=8192 $NODE_OPTIONS\"; stripes build stripes.config.js",
     "stripes": "stripes",
     "start": "stripes serve stripes.config.js",
     "build-module-descriptors": "stripes mod descriptor stripes.config.js --output ./ModuleDescriptors",
@@ -36,7 +36,7 @@
     "@folio/marccat": ">=1.8.5",
     "@folio/myprofile": ">=1.1.0",
     "@folio/notes": ">=1.0.0",
-    "@folio/oai-pmh": ">=1.0.0",
+    "@folio/oai-pmh": "git://github.com/folio-org/ui-oai-pmh.git#ui-for-rancher",
     "@folio/orders": ">=1.1.0",
     "@folio/organizations": ">=1.0.0",
     "@folio/plugin-create-item": ">=1.0.0",
