--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@folio/circulation-log": ">=1.0.0",
     "@folio/courses": ">=1.0.0",
     "@folio/data-export": ">=1.0.0",
-    "@folio/data-import": "git://github.com/folio-org/ui-data-import.git#ui-for-rancher",
+    "@folio/data-import": ">=1.0.0",
     "@folio/developer": ">=1.5.0",
     "@folio/eholdings": ">=1.1.0",
     "@folio/erm-comparisons": ">=1.0.0",
