--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -4,15 +4,15 @@ stages:
       - publishImageConfig:
           dockerfilePath: ./docker/Dockerfile
           buildContext: ./
-          tag: docker.dev.folio.org/platform-complete:folijet-latest
+          tag: docker.dev.folio.org/platform-complete:spring-latest
           pushRemote: true
           registry: docker.dev.folio.org
         env:
           PLUGIN_BUILD_ARGS_FROM_ENV: OKAPI_URL, TENANT_ID
         envFrom:
-          - sourceName: tenant-config
+          - sourceName: spring-tenant-config
             sourceKey: TENANT_ID
-          - sourceName: tenant-config
+          - sourceName: spring-tenant-config
             sourceKey: OKAPI_URL
         cpuLimit: 1500m
         memoryLimit: 10Gi
@@ -22,20 +22,20 @@ stages:
     steps:
       - applyAppConfig:
           catalogTemplate: p-mf42h:folijet-helmcharts-platform-complete
-          version: 0.1.7
+          version: 0.1.8
           answers:
             image.repository: docker.dev.folio.org/platform-complete
-            image.tag: folijet-latest
+            image.tag: spring-latest
             ingress.enabled: true
-            ingress.hosts[0].host: folijet.ci.folio.org
+            ingress.hosts[0].host: spring.ci.folio.org
             ingress.hosts[0].paths[0]: /
             resources.limits.cpu: 700m
             resources.limits.memory: 786Mi
             postJob.enabled: false
-          name: platform-complete
+          name: platform-complete-spring
           targetNamespace: folijet
 timeout: 60
 branch:
   include:
-    - folijet-rancher
+    - spring-rancher
 notification: {}
