--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -4,7 +4,7 @@ stages:
       - publishImageConfig:
           dockerfilePath: ./docker/Dockerfile
           buildContext: ./
-          tag: docker.dev.folio.org/platform-complete:core-functional-latest
+          tag: docker.dev.folio.org/platform-complete:core-functional-${CICD_EXECUTION_SEQUENCE}
           pushRemote: true
           registry: docker.dev.folio.org
         env:
@@ -18,6 +18,22 @@ stages:
         cpuLimit: 1500m
         memoryRequest: 100Mi
         memoryLimit: 8Gi
+  - name: Deploy
+    steps:
+      - applyAppConfig:
+          catalogTemplate: p-9mwdx:core-functional-helmcharts-platform-complete
+          version: 0.1.9
+          answers:
+            image.tag: core-functional-${CICD_EXECUTION_SEQUENCE}
+            ingress.enabled: "true"
+            ingress.hosts[0].host: core-functional.ci.folio.org
+            ingress.hosts[0].paths[0]: /
+            resources.limits.memory: 500Mi
+            resources.limits.cpu: 500m
+            resources.requests.memory: 250Mi
+            resources.requests.cpu: 2500m
+          name: platform-complete
+          targetNamespace: cattle-prometheus-p-9mwdx
 timeout: 60
 branch:
   include:
